fix(ArtistHero.tsx): fix formatting of yearsExperience text feat(ArtistHero.tsx): add support for process.env.PORT environment variable fix(ArtistProduct.module.css): remove box-shadow on hover feat(ArtistServiceContent.tsx): add useMediaQuery hook import fix(ArtistServiceContent.tsx): fix formatting of size prop in Title component feat(TreatmentCard.tsx): replace ArtistServiceContent component with TreatmentCardContent feat(TreatmentCardContent.module.css): add CSS styles for TreatmentCardContent component feat(TreatmentCardContent.tsx): create TreatmentCardContent component fix(($locale).artist.$username._index.tsx): adjust SimpleGrid cols and spacing

--- a/app/components/artist/ArtistProduct.module.css
+++ b/app/components/artist/ArtistProduct.module.css
@@ -3,7 +3,6 @@
 
   &:hover {
     transform: scale(1.01);
-    box-shadow: var(--mantine-shadow-md);
   }
 }
 
